--- a/app/assets/css/modules/_large-hero.css
+++ b/app/assets/css/modules/_large-hero.css
@@ -12,16 +12,40 @@
 
 	&__title {
 		font-weight: 300;
-		font-size: 4.8rem;
+		font-size: 2.3rem;
 		color: $mainBlue;
 		margin: 0;
+
+		@mixin atSmall {
+			font-size: 3.1rem;
+		}
+
+		@mixin atMedium {
+			font-size: 3.8rem;
+		}
+
+		@mixin atLarge {
+			font-size: 4.8rem;
+		}
 	}
 
 	&__subtitle {
 		font-weight: 300;
-		font-size: 2.9rem;
+		font-size: 1.5rem;
 		color: $mainBlue;
 		margin: 0 0 1.5rem;
+
+		@mixin atSmall {
+			font-size: 2rem;
+		}
+
+		@mixin atMedium {
+			font-size: 2.6rem;
+		}
+
+		@mixin atLarge {
+			font-size: 3.5rem;
+		}
 	}
 
 	&__descr {
