--- a/app/assets/css/modules/_large-hero.css
+++ b/app/assets/css/modules/_large-hero.css
@@ -1,6 +1,12 @@
 .large-hero {
 	position: relative;
 
+	border-bottom: 10px solid $mainBlue;
+
+	&__image {
+		display: block;
+	}
+
 	&__text-content {
 		position: absolute;
 		top: 50%;
@@ -12,50 +18,41 @@
 
 	&__title {
 		font-weight: 300;
-		font-size: 2.3rem;
+		font-size: 2.4rem;
 		color: $mainBlue;
 		margin: 0;
 
 		@mixin atSmall {
-			font-size: 3.1rem;
-		}
-
-		@mixin atMedium {
-			font-size: 3.8rem;
-		}
-
-		@mixin atLarge {
 			font-size: 4.8rem;
 		}
+
 	}
 
 	&__subtitle {
 		font-weight: 300;
-		font-size: 1.5rem;
+		font-size: 1.6rem;
 		color: $mainBlue;
 		margin: 0 0 1.5rem;
 
 		@mixin atSmall {
-			font-size: 2rem;
+			font-size: 2.9rem;
 		}
 
-		@mixin atMedium {
-			font-size: 2.6rem;
-		}
-
-		@mixin atLarge {
-			font-size: 3.5rem;
-		}
 	}
 
 	&__descr {
 		font-weight: 100;
-		font-size: 1.875rem;
+		font-size: 1.2rem;
 		color: #FFF;
 		text-shadow: 2px 2px 0 rgba(0,0,0, .1);
 		max-width: 30rem;
 		margin: 0 auto;
 		margin-bottom: 1rem;
+
+		@mixin atSmall {
+			font-size: 1.875rem;
+		}
+
 	}
 
 }
