--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -2,5 +2,6 @@
 @import "base/_global";
 @import "base/_vars";
 @import "base/_mixins";
+@import "modules/_wrapper";
 @import "modules/_large-hero";
 @import "modules/_btn";
