--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -3,5 +3,7 @@
 @import "base/_vars";
 @import "base/_mixins";
 @import "modules/_wrapper";
+@import "modules/_page-section";
+@import "modules/_headline";
 @import "modules/_large-hero";
 @import "modules/_btn";
