--- a/app/assets/css/base/_global.css
+++ b/app/assets/css/base/_global.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 html,
 body {
 	font-family: "Roboto", sans-serif;
@@ -6,4 +10,8 @@ body {
 
 img {
 	max-width: 100%;
+}
+
+a {
+	color: $mainOrange;
 }
