--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -9,3 +9,5 @@
 @import "modules/_headline";
 @import "modules/_large-hero";
 @import "modules/_btn";
+@import "modules/_section-title";
+@import "modules/_feature-item";
