--- a/app/assets/css/modules/_page-section.css
+++ b/app/assets/css/modules/_page-section.css
@@ -9,4 +9,21 @@
 		background-color: $mainBlue;
 		color: #FFF;
 	}
+
+	&--testimonials {
+		background-color: #E0E6EF;
+
+		@mixin atLarge {
+			background: url("/assets/img/testimonials-bg.jpg") top center no-repeat;
+			background-size: cover;
+		}
+	}
+
+	&--no-b-padding-until-large {
+		padding-bottom: 0;
+
+		@mixin atLarge {
+			padding-bottom: 4.5rem;
+		}
+	}
 }
