--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -12,4 +12,6 @@
 @import "modules/_section-title";
 @import "modules/_feature-item";
 @import "modules/_testimonial";
-@import "modules/_footer"
+@import "modules/_footer";
+@import "modules/_header";
+@import "modules/_primary-nav";
