--- a/app/assets/css/modules/_header.css
+++ b/app/assets/css/modules/_header.css
@@ -43,6 +43,10 @@
 	&__menu-content {
 		display: none;
 
+		&--is-visible {
+			display: block;
+		}
+
 		@mixin atMedium {
 			display: block;	
 		}
