--- a/app/assets/css/modules/_primary-nav.css
+++ b/app/assets/css/modules/_primary-nav.css
@@ -1,7 +1,14 @@
 .primary-nav {
+	padding-top: 10px;
+
+	@mixin atMedium {
+		padding-top: 0;
+	}
 
 	&--pull-right {
-		float: right;
+		@mixin atMedium {
+			float: right;
+		}
 	}
 
 	ul {
@@ -12,8 +19,22 @@
 	
 	li {
 		list-style: none;
-		float: left;
-		padding-right: 20px;
+		display: inline-block;
+		padding-right: 4px;
+
+		&:last-child {
+			padding-right: 0;
+
+			@mixin atMedium {
+				padding-right: 20px;
+			}
+		}
+
+		@mixin atMedium {
+			padding-right: 20px;
+			float: left;
+			display: block;
+		}
 	}	
 
 	a {
@@ -21,6 +42,12 @@
 		font-weight: 300;
 		text-decoration: none;
 		display: block;	
-		padding: 12px 0;
+		padding: 6px 0;
+		background-color: rgba($mainBlue, .5);
+
+		@mixin atMedium {
+			padding: 12px 0;
+			background-color: transparent;
+		}
 	}
 }
