--- a/app/assets/css/modules/_reveal-item.css
+++ b/app/assets/css/modules/_reveal-item.css
@@ -1,8 +1,10 @@
 .reveal-item {
 	opacity: 0;
-	transition: opacity 1s ease-out;
+	transform: scale(1.15);
+	transition: all 1s ease-out;
 
 	&--is-visible {
 		opacity: 1;
+		transform: scale(1);
 	}
 }
