--- a/app/assets/css/modules/_primary-nav.css
+++ b/app/assets/css/modules/_primary-nav.css
@@ -48,6 +48,10 @@
 		@mixin atMedium {
 			padding: 12px 0;
 			background-color: transparent;
+
+			&.is-current-link {
+				color: $mainOrange;
+			}
 		}
 	}
 }
