Added modal logic

--- a/app/assets/css/modules/_modal.css
+++ b/app/assets/css/modules/_modal.css
@@ -6,6 +6,16 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
+	opacity: 0;
+	visibility: hidden;
+	transform: scale(1.2);
+	transition: all .3s ease-out;
+
+	&--is-visible {
+		opacity: 1;
+		visibility: visible;
+		transform: scale(1);
+	}
 
 	&__inner {
 		position: absolute;
