--- a/app/assets/css/modules/_page-section.css
+++ b/app/assets/css/modules/_page-section.css
@@ -14,8 +14,10 @@
 		background-color: #E0E6EF;
 
 		@mixin atLarge {
-			background: url("/assets/img/testimonials-bg.jpg") top center no-repeat;
-			background-size: cover;
+			&.lazyload {
+				background: url("/assets/img/testimonials-bg.jpg") top center no-repeat;
+				background-size: cover;
+			}
 		}
 	}
 
