Added Modernizr fallback for flexbox

--- a/app/assets/css/modules/_row.css
+++ b/app/assets/css/modules/_row.css
@@ -1,7 +1,7 @@
 .row {
 	@mixin clearfix;
 
-	&--equal-height-at-large {
+	.flexbox &--equal-height-at-large {
 		@mixin atLarge {
 			display: flex;
 		}
